--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
-    <title>Project Title 3</title>
+    <title>Remap data</title>
     <meta charset="UTF-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
