--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="./">
 
     <link rel="shortcut icon" href="favicon.ico?ver=1.0.0">
 
